# blackhole

./: .gitignore  CMakeLists.txt  CNAME  README.md  index.html  po.html
Windows/: BlackHoleSimulation.cpp  BlackHoleSimulation.h  Blackhole.sln  Blackhole.vcxproj  Blackhole.vcxproj.filters  Main.cpp  README.md  glad.c
Windows/Libraries/include/glad/: glad.h
Windows/Libraries/lib/: glfw3.lib
Windows/shaders/: particle.frag  particle.vert
cpp/: CMakeLists.txt  run.sh
cpp/shaders/: blackhole.frag
cpp/src/: Shader.cpp  ShadersEmbedded.hpp  main.cpp
shaders/: blackhole.vert
src/: Math.hpp  Shader.cpp  Shader.hpp  main.cpp
